--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -8,7 +8,6 @@ body {
 
 .comment-list {
   margin: auto;
-  max-width: 85%;
   padding: 3%;
 }
 
@@ -27,7 +26,6 @@ body {
 
 .comment-form {
   margin: auto;
-  max-width: 85%;
 }
 
 .comment-form-commenter input {
