--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -74,6 +74,11 @@ p {
   max-width: 36px;
 }
 
+.main-content {
+  margin: auto;
+  max-width: 85%;
+}
+
 .main-content a {
   color: #00b0ff;
 }
